--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -107,12 +107,12 @@ h2 {
             width: 50%;
             // margin-left: 50px;
             // margin-top: 100px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+                // display: flex;
+                // flex-direction: column;
+                // align-items: center;
             .question__form {
-                margin: 0 auto;
-                width: 75%;
+                // margin: 0 auto;
+                // width: 75%;
             }
             button {
                 background: none;
@@ -187,12 +187,12 @@ h2 {
         display: flex;
         .question__options {
             width: 50%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
             .question__form {
-                margin: 0 auto;
-                width: 75%;
+                // margin: 0 auto;
+                // width: 75%;
             }
             button {
                 background: none;
@@ -428,7 +428,7 @@ h2 {
             }
         }
         .question__image {
-            width: 505;
+            width: 50%;
             display: flex;
             align-items: center;
             img {
